Added Tools section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base{
+@layer base {
     body {
         @apply dark:bg-gray-800 bg-white
+    }
+}
+
+
+.image-container {
+
+    width: 100%;
+
+    >div {
+        position: unset !important;
+    }
+
+    .image {
+        object-fit: contain;
+        width: 100% !important;
+        position: relative !important;
+        height: unset !important;
     }
 }
